# Fast-API-asg-1

./: README.md  main.py  practice.py  pyproject.toml
